--- a/static/welcome.css
+++ b/static/welcome.css
@@ -41,6 +41,6 @@ html {
   text-decoration: none;
   width:18%;
   position: fixed;
-  right: 30px;
-  bottom: 30px;
+  right: 60px;
+  bottom: 50px;
 }
